2010-09-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Cleaned-up files

2010-01-29  Moreno Feltscher  <moreno@luagsh.ch>

	* Release to TER
	* Raised version to 1.0.2

2010-01-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #6214: Error in sanitizePath function when PATH_site contains symlinks (Thanks to Alexander Stehlik)

2010-01-12  Moreno Feltscher  <moreno@luagsh.ch>

	* Release to TER
	* Raised version to 1.0.1

2010-01-11  Xavier Perseguers  <typo3@perseguers.ch>

	* Made file icons with white background transparent instead and lowered depth to number of colors really needed
	* Fixed bug #5965: PHP error warning for in_array functions is shown because one given variable isn't declared as an array

2010-01-11  Moreno Feltscher  <moreno@luagsh.ch>

	* Fixed bug #5964: Files with special characters or spaces in their filenames or paths are not accessible
	* Fixed bug #5966: If there are no GET parameters given this ends up in a PHP error warning

2010-01-10  Moreno Feltscher  <moreno@luagsh.ch>

	* Release to TER
	* Raised version to 1.0.0

2010-01-10  Xavier Perseguers  <typo3@perseguers.ch>

	* Added samples hooks in directory Samples/
	* Refactored helper methods to a dedicated static class (useful when hooking into file_list)
	* Updated documentation

2010-01-10  Moreno Feltscher  <moreno@luagsh.ch>

	* Got rid of the new icons and use a text instead
	* Added link to every icon shown in frontend
	* Corrected regular expression for file ignoring due to wrong Microsoft Windows thumbnail file check
	* Updated language files
	* Added new icons for sorting and changed sort functionality
	* Fixed sort functionality for folders
	* Fixed language labels for directory sizes
	* Updated documentation

2010-01-09  Moreno Feltscher  <moreno@luagsh.ch>

	* Reorganized icons

2010-01-09  Xavier Perseguers  <typo3@perseguers.ch>

	* Added hook to post-process the list of files
	* Finally fixed indexed_search problem
